# MinimalMoveitThreadClass

./: README.md
minimal_moveit_thread_class/: CMakeLists.txt  README.md  package.xml
minimal_moveit_thread_class/include/minimal_moveit_thread_class/: moveit_class.hpp
minimal_moveit_thread_class/launch/: launch_custom_ur_moveit.launch.py  launch_ur_example.launch.py  ur_routine.launch.py
minimal_moveit_thread_class/rviz/: view_robot.rviz
minimal_moveit_thread_class/src/: moveit_node.cpp
minimal_moveit_thread_class/src/classes/: moveit_class.cpp
